# compas_brep

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  PROMPTS.md  README.md  main.py  mkdocs.yml  progress.txt  pyproject.toml  tasks.py
.agents/: progress.txt  surface-type-support-plan.md
.agents/adr/: 0001-native-json-brep-exchange.md  0002-rhino-rebuild-via-brepbuilder.md
.agents/issues/brep-exchange/: 01-rhino-rebuild-via-brep-builder.md  02-v6-explicit-loop-roles-and-pcurves.md  03-cross-backend-contract-harness.md  04-rhino-cylinder-surfaces.md  05-rhino-sphere-cone-torus-surfaces.md  06-analytic-edge-curve-tags.md  progress.txt
.agents/issues/surface-type-support/: 01-centralize-surface-codec.md  02-cylinder-surfaces-end-to-end.md  03-sphere-surfaces-end-to-end.md  04-torus-surfaces-end-to-end.md  05-cone-surfaces-end-to-end.md  06-robust-fallback-offset-unknown.md  07-docs-and-examples.md  progress.txt
.agents/issues/unified-brep-wrapper/: 02-topology-sub-objects-occ.md  05-rhino-topology-sub-objects.md  06-rhino-serialization-parity.md  07-compas-occ-benchmark.md  08-rhino-backend-operational-testing.md
.agents/prd/: inherit-compas-geometry-geometry.md  multi-context-scene-objects.md  unified-brep-wrapper.md
.agents/runners/: afk-ralph.py  afk-ralph.sh  ralph-once.sh
.agents/skills/to-issues/: SKILL.md
.agents/skills/to-prd/: SKILL.md
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/examples/: index.html
0.1.0/installation/: index.html
0.1.0/introduction/: index.html
0.1.0/reference/compas_brep.backend.occ/: index.html
0.1.0/reference/compas_brep.backend.rhino/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/examples/: index.html
0.1.1/installation/: index.html
0.1.1/introduction/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/examples/: index.html
0.1.2/installation/: index.html
0.1.2/introduction/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/examples/: index.html
0.1.3/installation/: index.html
0.1.3/introduction/: index.html
0.1.3/search/: search_index.json
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/examples/: index.html
0.1.4/installation/: index.html
0.1.4/introduction/: index.html
0.1.4/search/: search_index.json
docs/: examples.md  index.md  installation.md  introduction.md  license.md
docs/reference/: compas_brep.backend.occ.md  compas_brep.backend.rhino.md  compas_brep.brep.md  compas_brep.curves.nurbs.md  compas_brep.edge.md  compas_brep.face.md  compas_brep.loop.md  compas_brep.md  compas_brep.operations.md  compas_brep.scene.md  compas_brep.surfaces.nurbs.md  compas_brep.trim.md  compas_brep.vertex.md
examples/: boolean_subtraction.py  inspect_surface_types.py  view_analytic_surface.py
examples/benchmark/: 01_primitives.py  02_booleans.py  03_queries.py  04_topology.py  05_transforms.py  06_modeling_ops.py  07_io.py  08_generators.py  README.md  _bench.py  run_comparison.py
examples/breps/: brep_exchange.py  brep_explorer.py  brep_fillet.py  brep_from_booleans.py  brep_from_extrusion.py  brep_from_extrusion2.py  brep_from_loft.py  brep_from_mesh.py  brep_from_shape.py  brep_intersections.py  brep_overlap.py  brep_serialisation.py  brep_slice.py  brep_split.py  brep_trim.py  brep_with_hole.py  brep_with_holes.py  brep_with_holes2.py
examples/curves/: curve_closest_parameters_curve.py  curve_closest_point.py  curve_comparison1.py  curve_comparison2.py  curve_divide.py  curve_from_circle.py  curve_from_ellipse.py  curve_from_interpolation.py  curve_from_line.py  curve_from_parameters.py  curve_from_points.py  curve_joining.py  curve_segmentation.py
examples/rhino/: rhino_brep.gh
examples/surfaces/: surface_aabb.py  surface_frames.py  surface_from_fill.py  surface_from_meshgrid.py  surface_from_parameters.py  surface_from_points.py  surface_intersections_with_line.py  surface_isocurves.py  surface_jsondata.py  surface_obb.py  surface_random.py  surface_spacepoints.py
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
site/changelog/: index.html
site/examples/: index.html
site/installation/: index.html
site/introduction/: index.html
site/license/: index.html
src/compas_brep/: __init__.py  brep.py  csg.py  data_example.py  edge.py  errors.py  exchange.py  face.py  loop.py  operations.py  trim.py  vertex.py
tests/: conftest.py  exchange_fixtures.py  test_analytic_edge_curves.py  test_boolean.py  test_brep_api.py  test_cone_surfaces.py  test_cylinder_surfaces.py  test_exchange_fixtures.py  test_exchange_parameterization.py  test_exchange_schema.py  test_new_constructors.py  test_nurbs_geometry_transforms.py  test_offset_surface_fallback.py  test_rhino_cylinder_surfaces.py  test_rhino_serialization.py  test_rhino_sphere_cone_torus_surfaces.py  test_rhino_topology_sub_objects.py  test_serialization.py  test_sphere_surfaces.py  test_topology_sub_objects.py  test_torus_surfaces.py
tests/fixtures/: legacy_v4_box.json  occ_cone.json  occ_cylinder.json  occ_sphere.json  occ_torus.json  rhino_box.json  rhino_box_with_hole.json  rhino_cone.json  rhino_cylinder.json  rhino_filleted_box.json  rhino_sphere.json  rhino_torus.json
(+126 files in other folders)
