[project]
name = "compas-brep"
version = "0.1.0"
description = "Canonical Brep implementation based on COMPAS framework with pluggable OCC/Rhino backends"
readme = "README.md"
authors = [
    { name = "Chen Kasirer", email = "kasirer@arch.ethz.ch" }
]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "compas>=2.0",
    "numpy",
    "scipy",
]

[project.urls]
Repository = "https://github.com/GKR/compas_brep"

[project.optional-dependencies]
occ = ["cadquery-ocp-novtk>=7.8; python_version >= '3.10'", "compas_viewer>=1.0"]

[dependency-groups]
dev = [
    "invoke",
    "ruff",
    "pytest",
    "compas_invocations2[mkdocs]",
    "bump-my-version",
    "twine",
    "wheel",
    "build",
]
docs = [
    #"zensical",  # TODO: this works, need to figure our how to use with mike and add to compas-actions.
    "mkdocstrings[python]",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 179
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
