[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

# ============================================================================
# project info
# ============================================================================

[project]
name = "compas-brep"
version = "0.1.3"
description = "Canonical Brep wrapper based on COMPAS framework with pluggable OCC/Rhino backends"
readme = "README.md"
authors = [
    { name = "Chen Kasirer", email = "kasirer@arch.ethz.ch" }
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "compas>=2.0",
    "numpy",
    "scipy",
]

[project.urls]
Repository = "https://github.com/gramaziokohler/compas_brep"

[project.optional-dependencies]
occ = ["cadquery-ocp-novtk>=7.8; python_version >= '3.10'"]
dev = [
    "invoke",
    "ruff",
    "pytest",
    "compas_invocations2[mkdocs]",
    "bump-my-version",
    "twine",
    "wheel",
    "build",
    "compas_viewer>=1.0"
]
docs = [
    #"zensical",  # TODO: this works, need to figure our how to use with mike and add to compas-actions.
    "mkdocstrings[python]",
]
viz = [
    "compas_viewer>=1.0"
]

# ============================================================================
# Linting and formatting
# ============================================================================

[tool.ruff]
line-length = 179
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

# ============================================================================
# Testing
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not rhino'"

# ============================================================================
# Release 
# ============================================================================

[tool.bumpversion]
current_version = "0.1.3"
message = "Bump version to {new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/compas_brep/__init__.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"
